Throttle Cursor should not invariant when the current time is smaller than the last obtained time

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-10-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We should remove this invariant as the call above to get the currentMillis can go backwards in time, causing us to hit the invariant.

      We resolved a similar issue in SERVER-42991 for the ThrottleCursor unit tests.

      In my workload where I use the ThrottleCursor I witness that once ~3 minutes the invariant failing because _startMillis is one higher than currentMillis and we only set _startMillis from currentMillis.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: