SERVER-43755 Throttle Cursor should not invariant when the current time is smaller than the last obtained time